index.html file has been updated and commited

--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<!DOCTYPE html>
-<h1> CODE COMMIT </h1>
-<h2> this is a file to be pushed on AWS Repository using Code Commit service</h2>
-<h3> for DEV </h3>
-<h4> DEVOPS is great </h4>
-<h5> where is my destination </h5>
+<html>
+<head>
+  <title>My Website</title>
+  <script>
+    // JavaScript code
+    window.onload = function() {
+      // Access an HTML element by its id
+      var heading = document.getElementById('heading');
 
+      // Change the text content of the heading
+      heading.textContent = 'Welcome to My Website!';
+    };
+  </script>
+</head>
+<body>
+  <h1 id="heading">Hello, World!</h1>
+</body>
+</html>
